# imu-gps-eskf

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  README_CLARIFICATIONS_FROM_RESEARCH.md  README_WHAT_WE_ARE_IN_MIDDLE_OF.md  dev.sh  main.cpp  make_nuscenes_can_bus_sqlite.py  run.sh  sync_docs_from_quarto_site.sh  sync_eskf_docs_from_quarto_site.sh  to_do.md
.context_refresh/: imu-gps-eskf_expert.txt  imu-gps-eskf_expert_branch_1.txt  imu-gps-eskf_expert_branch_2.txt  imu-gps-eskf_expert_branch_3.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
.scratch/: eskf_flow.md  eskf_flow.mmd
analysis/: .gitignore  paths.example.json  run_supported_scene_seed_sweep.py
analysis/changing_seed/: analyze_non_beating_geometry.py
analysis/scene_analysis/: README.md  common.py
analysis/scene_analysis/all_scenes/: run_all_scenes.py
analysis/scene_analysis/startup_diagnostics/: README.md  run_startup_diagnostics.py
analysis/supported_scene_seed_sweep/15e0b11/: summary.json  summary.md
analysis/supported_scene_seed_sweep/5d6899d/: failed_cases.csv  non_beating_cases.csv  per_seed_summary.csv  summary.json  summary.md
docs/: _docs-strip.html  index.qmd  references.bib
docs/api/: index.qmd
docs/api/groups/: index.qmd
docs/api/types/: index.qmd
docs/eskf/: index.qmd
docs/inputs/: index.qmd
docs/overview/: index.qmd
docs/reference/: index.qmd
docs/reference/cpp-api/: index.qmd
docs/reference/cpp-api/groups/: index.qmd
docs/reference/cpp-api/types/: index.qmd
docs/reference/input-files/: index.qmd
docs/reference/output-files/: index.qmd
docs/synthetic_gps/: index.qmd
docs/theory/: index.qmd
docs/theory/conventions/: index.qmd
docs/theory/supported-input/: index.qmd
eskf_docs/: index.qmd  references.bib
eskf_docs/api/groups/: index.qmd
eskf_docs/api/types/: index.qmd
eskf_docs/conventions/: index.qmd
eskf_docs/eskf/: index.qmd
eskf_docs/initialization/: index.qmd
eskf_docs/inputs/: index.qmd
eskf_docs/synthetic_gps/: index.qmd
include/: eskf.hpp  gps_generation.hpp  initialization.hpp  outputs.hpp  runtime_loop.hpp  scene_io.hpp  scene_types.hpp
metadata/: README.md  scene_startup_begin_utimes.csv  supported_nuscenes_scenes.txt
output/: gps.json
scenarios/: scene_ms_imu.json  scene_pose.json  scene_zoe_veh_info.json
scripts/: check_plot_asset.sh  plot_xy.py  requirements-plot.txt
src/: dump_startup_trace.cpp  dump_truth_max_radius.cpp  eskf.cpp  gps_generation.cpp  initialization.cpp  outputs.cpp  runtime_loop.cpp  scene_io.cpp
tests/: test_app_integration.cpp  test_eskf.cpp  test_gps_generation.cpp  test_initialization.cpp  test_outputs.cpp  test_runtime_loop.cpp  test_scene_io.cpp
